<<<<<<<< HEAD:project/scenesScripts/player.tscn
[gd_scene load_steps=6 format=3 uid="uid://cujevgx4bmemi"]
========
[gd_scene load_steps=12 format=3 uid="uid://cujevgx4bmemi"]
>>>>>>>> KateA:toy4/toy4/scenesScripts/player.tscn

[ext_resource type="Script" path="res://scenesScripts/player.gd" id="1_jx8cd"]
[ext_resource type="Texture2D" uid="uid://c3ix0ac0471q0" path="res://resources/11png.png" id="2_tkmoc"]
[ext_resource type="Texture2D" uid="uid://d4khx7lcuoan8" path="res://resources/n1.png" id="3_krs72"]
[ext_resource type="Texture2D" uid="uid://cuyd53cswgq3t" path="res://resources/b1.png" id="3_ulnjv"]
[ext_resource type="Texture2D" uid="uid://brhpahqxqbrnl" path="res://resources/n2.png" id="4_6uc0f"]
[ext_resource type="Texture2D" uid="uid://d0yy0dgyr2k4o" path="res://resources/b2.png" id="4_kflo0"]
[ext_resource type="Texture2D" uid="uid://b1lpw6ly31nrg" path="res://resources/f1.png" id="7_2r5fq"]
[ext_resource type="Texture2D" uid="uid://dk2p2oc3o0ohx" path="res://resources/f2.png" id="8_b0051"]

[sub_resource type="SpriteFrames" id="SpriteFrames_76ybn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tkmoc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mt6t0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ulnjv")
}, {
"duration": 1.0,
"texture": ExtResource("4_kflo0")
}],
"loop": true,
"name": &"backward",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_krs72")
}, {
"duration": 1.0,
"texture": ExtResource("4_6uc0f")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2r5fq")
}, {
"duration": 1.0,
"texture": ExtResource("8_b0051")
}, {
"duration": 1.0,
"texture": ExtResource("3_krs72")
}, {
"duration": 1.0,
"texture": ExtResource("4_6uc0f")
}, {
"duration": 1.0,
"texture": ExtResource("3_krs72")
}, {
"duration": 1.0,
"texture": ExtResource("4_6uc0f")
}, {
"duration": 1.0,
"texture": ExtResource("3_ulnjv")
}],
"loop": true,
"name": &"forward",
"speed": 8.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 2
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_jx8cd")

[node name="CoreSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_76ybn")

[node name="VisualSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_mt6t0")

[node name="attack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="fastAttack" type="Timer" parent="." groups=["player"]]
wait_time = 0.3
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -54, 54, 0, 0, 55, -55, 0)

[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="fastAttack" to="." method="_on_fast_attack_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
